--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -17,3 +17,40 @@
 
   100%
     transform: translateY(0px)
+
+
+///////// Card hover --------------------------------------
+.crd_hover_txt
+  position: relative  
+  padding: 0 !important
+  overflow: hidden !important  
+  border-bottom-left-radius: 1.4em 
+  border-bottom-right-radius: 1.4em 
+  &:hover    
+    .crd_hover_txt--body   
+      transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1) 
+      transform: translateY(0)
+
+  .crd_hover_txt--body
+    position: absolute
+    padding: 1.5rem
+    bottom: 0    
+    transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1)
+    transform: translateY(calc( 100% - 3.85rem ))
+    background-color: $color-acento-contenido
+    border-bottom-left-radius: 1.4em 
+    border-bottom-right-radius: 1.4em 
+  
+  @media (min-width:1200px) and (max-width:1400px)  
+    .crd_hover_txt--body
+      p
+        font-size: 0.85em
+
+.tarjeta.color-primario-c
+  background-color: lighten($color-primario, 10%)
+
+.cajon.color-primario
+  background-color: lighten($color-primario, 10%)
+
+.texto-negro
+  color: black
